namespace/dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-ns
  name: test-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-backend 
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
     maxSurge: 1
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-backend
    spec:
      containers:
        - name: test-backend
          # image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
          image: 211125646380.dkr.ecr.ap-south-1.amazonaws.com/test_repo:c3186192ce18215782ac87e3a96181f084e40a62_develop
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3    
---
apiVersion: v1
kind: Service
metadata:
  name: test-backend-service
  namespace: test-ns
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app.kubernetes.io/name:  test-backend
  type: NodePort
